################################################################################
### metadata ###################################################################
################################################################################



################################################################################
### user config ################################################################
################################################################################



################################################################################
### sources ####################################################################
################################################################################

file(GLOB meta_sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB meta_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

################################################################################
### targets ####################################################################
################################################################################

add_library(llcemeta ${meta_sources})
target_include_directories(llcemeta PRIVATE ${SDL2_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
target_link_libraries(llcemeta PUBLIC llceutil ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})

################################################################################
### packaging ##################################################################
################################################################################

install(TARGETS llcemeta DESTINATION ${CMAKE_INSTALL_PREFIX})

################################################################################
### sub-packaging ##############################################################
################################################################################


