################################################################################
### metadata ###################################################################
################################################################################

# NOTE(JRC): This submodule is meant to encapsulate all utility code of interest
# to both the harness and the simulation (e.g. geometric primitives, rendering
# helpers, etc.).

################################################################################
### user config ################################################################
################################################################################



################################################################################
### sources ####################################################################
################################################################################

file(GLOB  util_lib_sources  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB  util_lib_headers  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

################################################################################
### targets ####################################################################
################################################################################

set(util_lib_target llceutil CACHE INTERNAL "" FORCE)

add_library(${util_lib_target} ${util_lib_sources})
target_include_directories(${util_lib_target} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(${util_lib_target} PUBLIC ${sim_cnf_target})
target_include_directories(${util_lib_target} PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(${util_lib_target} PUBLIC ${SDL2_LIBRARIES})

################################################################################
### packaging ##################################################################
################################################################################

install(TARGETS ${util_lib_target} DESTINATION ${CMAKE_INSTALL_PREFIX})

################################################################################
### sub-packaging ##############################################################
################################################################################


