################################################################################
### metadata ###################################################################
################################################################################

# NOTE(JRC): This submodule is meant to encapsulate all utility code of interest
# to both the harness and the simulation (e.g. geometric primitives, rendering
# helpers, etc.).

################################################################################
### user config ################################################################
################################################################################



################################################################################
### sources ####################################################################
################################################################################

file(GLOB util_sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB util_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

################################################################################
### targets ####################################################################
################################################################################

add_library(llceutil ${util_sources})
target_include_directories(llceutil PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${SDL2_INCLUDE_DIRS})
target_link_libraries(llceutil PUBLIC llceconfig ${SDL2_LIBRARIES})

################################################################################
### packaging ##################################################################
################################################################################

install(TARGETS llceutil DESTINATION ${CMAKE_INSTALL_PREFIX})

################################################################################
### sub-packaging ##############################################################
################################################################################


